--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,6 +7,16 @@ android {
     compileSdkVersion 29
     buildToolsVersion "30.0.1"
 
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
+    // For Kotlin projects
+    kotlinOptions {
+        jvmTarget = "1.8"
+    }
+
+
     dataBinding {
         enabled = true
     }
@@ -15,8 +25,8 @@ android {
         applicationId "com.brunoshiroma.benchtool_android"
         minSdkVersion 16
         targetSdkVersion 29
-        versionCode 5005//because multi apk =(
-        versionName "0.1.5"
+        versionCode 5007//because multi apk =(
+        versionName "0.1.7"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         testHandleProfiling true
@@ -36,6 +46,12 @@ android {
     }
 
     buildTypes {
+        debug{
+            debuggable true
+            minifyEnabled false
+            applicationIdSuffix '.debug'
+            versionNameSuffix '-DEBUG'
+        }
         release {
             debuggable false
             minifyEnabled true
@@ -56,7 +72,7 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
 
-
+    implementation 'com.brunoshiroma:benchtool-java:0.1.3'
 
     testImplementation 'junit:junit:4.13'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
