--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,7 @@
 buildscript {
     ext.kotlin_version = "1.3.72"
     repositories {
+
         google()
         jcenter()
     }
@@ -16,6 +17,9 @@ buildscript {
 
 allprojects {
     repositories {
+        maven {
+            url  "https://dl.bintray.com/brunoshiroma/benchtool-java/"
+        }
         google()
         jcenter()
     }
