--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,8 +9,10 @@ android {
     compileSdkVersion 29
     buildToolsVersion "30.0.1"
 
-    dataBinding {
-        enabled = true
+    ndkVersion "21.3.6528147"
+
+    buildFeatures{
+        dataBinding = true
     }
 
     defaultConfig {
@@ -69,6 +71,8 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
+    implementation 'androidx.test.espresso:espresso-idling-resource:3.2.0'
+
 
     implementation 'com.android.support:multidex:1.0.3'
 
