added benchtool-rust via dinamic feature

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
-        tools:targetApi="m">
+        tools:targetApi="m"
+        android:name=".BenchtoolApplication"
+        >
         <activity android:name=".AboutActivity"
             android:parentActivityName=".MainActivity"
             />
