--- a/app/build.gradle
+++ b/app/build.gradle
@@ -56,6 +56,7 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
+    dynamicFeatures = [':benchtool_rust']
 }
 
 dependencies {
@@ -66,6 +67,8 @@ dependencies {
     implementation 'com.google.android.material:material:1.2.0'
 
     implementation 'com.google.android.gms:play-services-ads:19.3.0'
+
+    api "com.google.android.play:core:1.8.0"
 
     implementation 'androidx.core:core-ktx:1.3.1'
     implementation 'androidx.appcompat:appcompat:1.2.0'
