added support for rust, via dynamic feature

--- a/benchtool_rust/src/main/AndroidManifest.xml
+++ b/benchtool_rust/src/main/AndroidManifest.xml
@@ -1,6 +1,11 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:dist="http://schemas.android.com/apk/distribution"
-    package="com.brunoshiroma.rustfeature">
+    package="com.brunoshiroma.benchtool_android.benchtool_rust"
+    >
+
+    <application
+        android:hasCode="true"
+        android:extractNativeLibs="true"/>
 
     <dist:module
         dist:instant="false"
@@ -8,6 +13,6 @@
         <dist:delivery>
             <dist:on-demand />
         </dist:delivery>
-        <dist:fusing dist:include="true" />
+        <dist:fusing dist:include="true"/>
     </dist:module>
 </manifest>
