--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,15 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
-    ext.kotlin_version = "1.4.0"
+    ext.versions = [
+        'kotlin_version' : "1.4.0",
+        'compileSdkVersion' : 29,
+        'buildToolsVersion' : "30.0.1",
+        ndkVersion : "21.3.6528147",
+        minSdkVersion : 16,
+        targetSdkVersion : 29,
+    ]
+
+
     repositories {
 
         google()
@@ -8,7 +17,7 @@ buildscript {
     }
     dependencies {
         classpath "com.android.tools.build:gradle:4.0.1"
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$versions.kotlin_version"
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
