--- a/.github/workflows/instrumented.yml
+++ b/.github/workflows/instrumented.yml
@@ -20,6 +20,8 @@ jobs:
     strategy:
       matrix:
         java_version: [1.8]
+    env:
+
     steps:
       # In order to have sha256sum on macOS, we need to install coreutils first
       # Use this until coreutils or sha256sum are natively included in macOS on actions https://github.com/actions/virtual-environments/issues/90
