--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,7 +2,6 @@ import java.time.LocalDateTime
 
 apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
-apply plugin: 'kotlin-android-extensions'
 apply plugin: 'kotlin-kapt'
 
 android {
@@ -10,8 +9,20 @@ android {
     buildToolsVersion versions.buildToolsVersion
     ndkVersion versions.ndkVersion
 
-    buildFeatures{
-        dataBinding = true
+    buildFeatures {
+        dataBinding true
+        viewBinding true
+        buildConfig true
+
+    }
+
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_17
+        targetCompatibility JavaVersion.VERSION_17
+    }
+
+    kotlinOptions {
+        jvmTarget = "17"
     }
 
     defaultConfig {
@@ -24,7 +35,7 @@ android {
         multiDexEnabled true
 
         buildConfigField 'String', 'BUILD_YEAR', '"' + LocalDateTime.now().format("yyyy") + '"'
-        buildConfigField 'String', 'BUILD_DATE', '"' + LocalDateTime.now().format("yyyyMMdd HH:mm:ss")  + '"'
+        buildConfigField 'String', 'BUILD_DATE', '"' + LocalDateTime.now().format("yyyyMMdd HH:mm:ss") + '"'
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         testHandleProfiling true
@@ -36,7 +47,7 @@ android {
             // libraries Gradle should build and package with your APK.
             //
             abiFilters 'x86', 'x86_64', 'armeabi-v7a', 'arm64-v8a'
-            packagingOptions{
+            packagingOptions {
                 doNotStrip "**/*.so"
             }
         }
@@ -44,7 +55,7 @@ android {
     }
 
     buildTypes {
-        debug{
+        debug {
             debuggable true
             minifyEnabled false
             applicationIdSuffix '.debug'
@@ -57,34 +68,40 @@ android {
         }
     }
     dynamicFeatures = [':benchtool_rust']
+    packagingOptions {
+        jniLibs {
+            useLegacyPackaging true
+        }
+    }
+    namespace 'com.brunoshiroma.benchtool_android'
 }
 
 dependencies {
     implementation fileTree(dir: "libs", include: ["*.jar"])
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$versions.kotlin_version"
-    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.8'
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.8.0'
 
-    implementation 'com.google.android.material:material:1.2.0'
+    implementation 'com.google.android.material:material:1.11.0'
 
-    implementation 'com.google.android.gms:play-services-ads:19.3.0'
+    implementation 'com.google.android.gms:play-services-ads:22.6.0'
 
-    implementation 'net.java.dev.jna:jna:5.6.0@aar'
+    implementation 'net.java.dev.jna:jna:5.14.0@aar'
 
-    api "com.google.android.play:core:1.8.0"
+    api "com.google.android.play:core:1.10.3"
 
-    implementation 'androidx.core:core-ktx:1.3.1'
-    implementation 'androidx.appcompat:appcompat:1.2.0'
-    implementation 'androidx.constraintlayout:constraintlayout:2.0.1'
+    implementation 'androidx.core:core-ktx:1.12.0'
+    implementation 'androidx.appcompat:appcompat:1.6.1'
+    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
-    implementation 'androidx.test.espresso:espresso-idling-resource:3.3.0'
+    implementation 'androidx.test.espresso:espresso-idling-resource:3.5.1'
 
 
     implementation 'com.android.support:multidex:1.0.3'
 
-    implementation 'com.brunoshiroma:benchtool-java:0.1.3'
+    implementation 'com.brunoshiroma:benchtool-java:0.1.0-SNAPSHOT-20211224_222043_1'
 
-    testImplementation 'junit:junit:4.13'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.2'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
+    testImplementation 'junit:junit:4.13.2'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.5'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
 
 }
