--- a/benchtool_rust/build.gradle
+++ b/benchtool_rust/build.gradle
@@ -1,6 +1,5 @@
 apply plugin: "com.android.dynamic-feature"
 apply plugin: 'kotlin-android'
-apply plugin: 'kotlin-android-extensions'
 apply plugin: 'kotlin-kapt'
 
 android {
@@ -9,9 +8,17 @@ android {
 
     ndkVersion versions.ndkVersion
 
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_17
+        targetCompatibility JavaVersion.VERSION_17
+    }
+
+    kotlinOptions {
+        jvmTarget = "17"
+    }
+
     defaultConfig {
         minSdkVersion versions.minSdkVersion
-        targetSdkVersion versions.targetSdkVersion
 
         ndk {
             // Specifies the ABI configurations of your native
@@ -24,11 +31,12 @@ android {
         }
     }
 
-    buildTypes {
-        release {
-            debuggable false
+    packagingOptions {
+        jniLibs {
+            useLegacyPackaging true
         }
     }
+    namespace 'com.brunoshiroma.benchtool_android.benchtool_rust'
 
 }
 
@@ -36,7 +44,7 @@ dependencies {
     implementation project(":app")
 
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$versions.kotlin_version"
-    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.8'
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.8.0'
 
-    implementation 'net.java.dev.jna:jna:5.6.0@aar'
+    implementation 'net.java.dev.jna:jna:5.14.0@aar'
 }
