--- a/build.gradle
+++ b/build.gradle
@@ -1,22 +1,22 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
     ext.versions = [
-        'kotlin_version' : "1.4.0",
-        'compileSdkVersion' : 29,
-        'buildToolsVersion' : "30.0.1",
+        'kotlin_version' : '1.9.22',
+        'buildToolsVersion' : "34.0.0",
         ndkVersion : "21.3.6528147",
-        minSdkVersion : 16,
-        targetSdkVersion : 29,
+        compileSdkVersion: 34,
+        minSdkVersion : 19,
+        targetSdkVersion : 31,
     ]
 
 
     repositories {
 
         google()
-        jcenter()
+        mavenCentral()
     }
     dependencies {
-        classpath "com.android.tools.build:gradle:4.0.1"
+        classpath 'com.android.tools.build:gradle:8.3.0'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$versions.kotlin_version"
 
         // NOTE: Do not place your application dependencies here; they belong
@@ -27,13 +27,18 @@ buildscript {
 allprojects {
     repositories {
         maven {
-            url  "https://dl.bintray.com/brunoshiroma/benchtool-java/"
+            url = uri("https://maven.pkg.github.com/brunoshiroma/benchtool-java")
+            credentials {
+                username = "brunoshiroma"
+                password = "$mavenPassword" ?: System.getenv("GITHUB_TOKEN")
+
+            }
         }
         google()
-        jcenter()
+        mavenCentral()
     }
 }
 
-task clean(type: Delete) {
-    delete rootProject.buildDir
+tasks.register('clean', Delete) {
+    delete rootProject.layout.buildDirectory
 }
