--- a/gradle.properties
+++ b/gradle.properties
@@ -21,4 +21,5 @@ android.enableJetifier=true
 kotlin.code.style=official
 
 #for lib descompress on lib folder on device
-android.bundle.enableUncompressedNativeLibs=false
+android.nonTransitiveRClass=false
+android.nonFinalResIds=false
